hazelcast throws warnings on java 9+ modular environments: adding cmd line args as per hz recommendation